--- a/templates/base.html
+++ b/templates/base.html
@@ -24,7 +24,7 @@
                 {% if session.user %}
                     <li><a href="{{ url_for('profile', username=session['user']) }}">Profile</a></li> 
                     <li><a href="{{ url_for('add_task') }}">New Task</a></li>
-                    <li><a href="#">Manage Catagories</a></li>
+                    <li><a href="#">Manage Categories</a></li>
                     <li><a href="{{ url_for('logout') }}">Log Out</a></li>
                 {% else %}
                     <li><a href="{{ url_for('login') }}">Log In</a></li>
